js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/l1.7.kt
internal const konst constKey1 = "foo"
internal const konst constKey2 = "bar"

internal const konst constKey = constKey1 + "__" + constKey2

internal const konst constVal = 5

